[gd_scene load_steps=5 format=3 uid="uid://81xng8y44sjc"]

[ext_resource type="Texture2D" uid="uid://b2qg1hy3mmltg" path="res://Player.png" id="1_ui5kd"]
[ext_resource type="Script" path="res://player.gd" id="2_qeo2b"]
[ext_resource type="Texture2D" uid="uid://cufnfkfjoivu1" path="res://Gun.png" id="3_pk8xd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xxcum"]
size = Vector2(6.875, 8)

[node name="Player" type="Sprite2D"]
texture_filter = 1
scale = Vector2(4, 4)
texture = ExtResource("1_ui5kd")
script = ExtResource("2_qeo2b")

[node name="Gun" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("3_pk8xd")
offset = Vector2(4, 0)

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.4375, 0)
shape = SubResource("RectangleShape2D_xxcum")

[node name="Death_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Shoot_timer" type="Timer" parent="."]
wait_time = 0.075
one_shot = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="Death_timer" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="Shoot_timer" to="." method="_on_shoot_timer_timeout"]
